spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+@media (max-width: @screen-xs) {
+    body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+    body{font-size: 14px;}
+}
+
+
+
+
 /**  Header Navigation **/
 
 header .navbar {
